<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorSurfaceVariant5"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:text="@string/signup_title"
            android:textColor="?attr/colorOnSurfaceVariant5"
            android:textSize="24sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="@string/signup_hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="?attr/colorOnSurfaceVariant9"
                    android:textColorHint="?attr/colorOnSurfaceVariant9" />

                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="@string/signup_hint_first_name"
                    android:inputType="text"
                    android:textColor="?attr/colorOnSurfaceVariant9"
                    android:textColorHint="?attr/colorOnSurfaceVariant9"/>

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="@string/signup_hint_last_name"
                    android:inputType="text"
                    android:textColor="?attr/colorOnSurfaceVariant9"
                    android:textColorHint="?attr/colorOnSurfaceVariant9"/>

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ems="10"
                    android:hint="@string/signup_hint_password"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorOnSurfaceVariant9"
                    android:textColorHint="?attr/colorOnSurfaceVariant9" />

                <EditText
                    android:id="@+id/repeatPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/signup_hint_repeat_password"
                    android:inputType="textPassword"
                    android:textColor="?attr/colorOnSurfaceVariant9"
                    android:textColorHint="?attr/colorOnSurfaceVariant9" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="?attr/colorOnSurfaceVariant12"
            android:backgroundTint="?attr/colorSurfaceVariant7"
            android:text="Sign Up" />
    </LinearLayout>
</LinearLayout>
