<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorSurfaceVariant5"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="48dp"
            android:text="@string/reset_password"
            android:textColor="?attr/colorOnSurfaceVariant5"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/reset_password_hint_email"
            android:inputType="textEmailAddress"
            android:textColor="?attr/colorOnSurfaceVariant9"
            android:textColorHint="?attr/colorOnSurfaceVariant9"
            />

        <Button
            android:id="@+id/resetPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email_me"
            android:textColor="?attr/colorOnSurfaceVariant12"
            android:backgroundTint="?attr/colorSurfaceVariant7"
            />

    </LinearLayout>

</FrameLayout>
